[package]
name = "rrui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
flexi_logger = "0.31.8"
futures = "0.3.32"
iced_wgpu = "0.14.0"
log = "0.4.29"
wgpu = "27.0.0"
winit = "0.30.13"
