[package]
name = "rrui"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
bitflags = "2.11.0"
bytes = "1.11.1"
flexi_logger = "0.31.8"
futures = "0.3.32"
iced_wgpu = { version = "0.14.0", features = ["image", "svg"] }
image = "0.25.10"
log = "0.4.29"
minlin = "0.4.0"
smol_str = "0.2.2"
thiserror = "2.0.18"
wgpu = "27.0.0"
winit = "0.30.13"
